recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: unclosed character literal
		return 'AAAAAAAAAAAAAAAAAAAAAAAAAAAH !'
                                                      ^